consertado insercao e pull do banco